# ComfyUI-HPSv2-Nodes

./: README.md  __init__.py  hps.py  hpsv2.py  img_score.py  pyproject.toml
.github/workflows/: publish.yml
ComfyUI/: folder_paths1.py
ComfyUI/comfy/: samplers - 副本.py  utils - 副本.py
SD-ComfyUI/: A启动器-ComfyUI.exe - 快捷方式.lnk  RUN_GPU_10002.bat  RUN_GPU_10002_InputFromNAS.bat  RUN_GPU_20002.bat  RUN_GPU_20002_InputFromNAS.bat  RUN_GPU_20102.bat  RUN_GPU_30002.bat  RUN_GPU_30102.bat  RUN_GPU_40002.bat  RUN_test.bat  fp32-16.py
SD-ComfyUI/ComfyUI/: extra_model_paths.yaml  runComfyUIFile.json
SD-ComfyUI/ComfyUI/pysssss-workflows/: SoccerBabe.json
SD-ComfyUI/ComfyUI/user/default/: comfy.settings.json  comfy.templates.json
SD-ComfyUI/tgd_start/: ComfyUiConfigure.yaml  WebUIConfigure.yaml  startConfigureFile.json
SD-ComfyUI/update/: update.py  update_comfyui_and_python_dependencies.bat
